--- a/vercel.json
+++ b/vercel.json
@@ -5,24 +5,12 @@
         "src": "WA/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build", 
-            "config":
-            {
-                "distDir": "staticfiles_build"
-            }    
-        }
-    ],
+        }],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
+        
         {
             "src":"/(.*)",
-            "dest": "poll/wsgi.py"
+            "dest": "WA/wsgi.py"
         }
     ]
 }
