--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
             "use": "@vercel/static-build", 
             "config":
             {
-                "distDir": "staticfiles_build"
+                "distDir": "static"
             }    
         }
     ],
